@@ -1,3 +1,4 @@
+* Manage field context on Group value
 * Add export of selection string
 * Load plugins from local user directory
 * Manage tree_state attribute
